<resources>
    <string name="appbar_over_scroll_behavior">cn.lex_mung.client_android.app.behavior.FlingBehavior</string>
    <string name="app_name">绿豆圈</string>
    <string name="PeerScreenActivity">筛选</string>
    <string name="LoginActivity">登录</string>
    <string name="EditInfoActivity">编辑信息</string>
    <string name="FreeConsultActivity">免费简单咨询</string>
    <string name="FreeConsultDetailActivity">免费咨询详情</string>
    <string name="FastConsultActivity">专业深度咨询</string>
    <string name="MyAccountActivity">我的账户</string>
    <string name="TransactionListDetailsActivity">交易详情</string>
    <string name="TransactionListActivity">交易明细</string>
    <string name="AccountWithdrawalActivity">提现</string>
    <string name="AccountPayActivity">充值</string>
    <string name="MyLikeActivity">我的关注</string>
    <string name="SettingActivity">设置</string>
    <string name="AboutActivity">关于绿豆圈</string>
    <string name="FeedbackActivity">问题和反馈</string>
    <string name="AddEquitiesOrgActivity">添加组织</string>
    <string name="JoinEquitiesOrgActivity">权益详情</string>
    <string name="DiscountWayActivity">优惠方式</string>
    <string name="MessageActivity">消息</string>
    <string name="MyOrderActivity">我的订单</string>
    <string name="OrderDetailsActivity">订单详情</string>
    <string name="MapPickerActivity">选择位置</string>
    <string name="RequirementListActivity">需求列表</string>
    <string name="MapActivity">位置信息</string>
    <string name="text_save">保存</string>
    <string name="text_loading">加载中</string>
    <string name="text_cancel">取消</string>
    <string name="text_home_page">首页</string>
    <string name="text_me">我的</string>
    <string name="text_find_lawyer">找律师</string>
    <string name="text_equities">权益</string>
    <string name="text_search_lawyer">搜索律师</string>
    <string name="text_free_consult">免费简单咨询</string>
    <string name="text_free">免费</string>
    <string name="text_free_consult_1">答疑解惑</string>
    <string name="text_fast_consult">专业深度咨询</string>
    <string name="text_fast_consult_1">10分钟</string>
    <string name="text_fast_consult_2">精准匹配</string>
    <string name="text_experts_consult">专家权威咨询</string>
    <string name="text_experts_consult_1">1对1</string>
    <string name="text_experts_consult_2">电话咨询</string>
    <string name="text_share">分享</string>
    <string name="text_solution">解决方案</string>
    <string name="text_release_demand">发布需求</string>
    <string name="text_release_demand_1">发需求</string>
    <string name="text_synthesis_sort">综合排序</string>
    <string name="text_newest_enter">最新入驻</string>
    <string name="text_newest_active">最近活跃</string>
    <string name="text_all_field">全部领域</string>
    <string name="text_all_region">全部地区</string>
    <string name="text_screen">筛选</string>
    <string name="text_no_data">暂无结果</string>
    <string name="text_reset">重置</string>
    <string name="text_confirm">确定</string>
    <string name="text_lawyer_position">律师职务</string>
    <string name="text_social_position">社会职务</string>
    <string name="text_honor_the_name">荣誉名称</string>
    <string name="text_qualification_certificate">资格证书</string>
    <string name="text_select_the_type_of_problem">选择问题类型</string>
    <string name="text_please_enter_the_keyword">请输入关键字</string>
    <string name="text_supreme_people_court">最高人民法院</string>
    <string name="text_higher_people_court">高级人民法院</string>
    <string name="text_intermediate_people_court">中级人民法院</string>
    <string name="text_grass_roots_court">基层法院</string>
    <string name="text_supreme_people_p">最高人民检察院</string>
    <string name="text_higher_people_p">高级人民检察院</string>
    <string name="text_intermediate_people_p">中级人民检察院</string>
    <string name="text_grass_roots_p">基层检察院</string>
    <string name="text_select_by_province">按省份选择</string>
    <string name="text_resort_court">常去法院</string>
    <string name="text_resort_p">常去检察院</string>
    <string name="text_laws_case">服务案例</string>
    <string name="text_search">搜索</string>
    <string name="text_search_place">搜索地点</string>
    <string name="text_no_certification">未认证</string>
    <string name="text_0_age">0岁</string>
    <string name="text_active">活跃度</string>
    <string name="text_points">分</string>
    <string name="text_no_data_10">为方便您的录入，程序猿小哥哥们正在夜以继日的加班工作，我们将尽快开发功能，敬请期待~</string>
    <string name="text_post_num">%1$s  丨  %2$s</string>
    <string name="text_like">已关注</string>
    <string name="text_no_like">关注TA</string>
    <string name="text_base_info">基本信息</string>
    <string name="text_service_price">服务价格</string>
    <string name="text_telephone_counseling">电话咨询</string>
    <string name="text_tel_price">(%1$s元/%2$s)</string>
    <string name="text_client">— 客户端 —</string>
    <string name="text_please_enter_mobile">请输入手机号码</string>
    <string name="text_please_enter_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_login">登录</string>
    <string name="text_user_registered_agreement">成功登录APP即表示您同意</string>
    <string name="text_user_agreement">《用户服务协议》</string>
    <string name="text_edit_info"><![CDATA[编辑信息 >]]></string>
    <string name="text_my_order">我的订单</string>
    <string name="text_my_account">我的账户</string>
    <string name="text_my_like">我的关注</string>
    <string name="text_setting">设置</string>
    <string name="text_version_update">版本升级</string>
    <string name="text_newbie_guide">新手引导</string>
    <string name="text_about_app">关于绿豆圈</string>
    <string name="text_call_customer_service">联系客服</string>
    <string name="text_update_avatar">更换头像</string>
    <string name="text_user_name">用户名称</string>
    <string name="text_user_sex">性　　别</string>
    <string name="text_user_date">出生日期</string>
    <string name="text_user_region">所在地区</string>
    <string name="text_user_industry">您的行业</string>
    <string name="text_user_enterprise">您的企业</string>
    <string name="text_user_position">您的职务</string>
    <string name="text_user_email">您的邮箱</string>
    <string name="text_please_enter_user_name">请输入用户名称</string>
    <string name="text_please_select_user_sex">请选择用户性别</string>
    <string name="text_please_select_user_date">请选择出生日期</string>
    <string name="text_please_select_user_region">请选择所在地区</string>
    <string name="text_please_select_user_industry">请选择您的行业</string>
    <string name="text_please_enter_user_enterprise">请输入您的企业</string>
    <string name="text_please_enter_user_position">请输入您的职务</string>
    <string name="text_please_enter_user_email">请输入您的邮箱</string>
    <string name="text_photograph">拍照上传</string>
    <string name="text_photo_album">从相册选择</string>
    <string name="text_sure_to_delete">确定删除？</string>
    <string name="text_manual_open_permissions">您拒绝了权限，需要您手动去开启权限！</string>
    <string name="text_to_open">去开启</string>
    <string name="text_x">*</string>
    <string name="text_consult_type">咨询类型:</string>
    <string name="text_please_describe_your_problem">请简单描述您遇到的问题(限10-300个字)</string>
    <string name="text_please_enter_your_problem">请输入您遇到的问题</string>
    <string name="text_anonymous_release">匿名发布(隐藏我的头像、用户名等信息)</string>
    <string name="text_submit">提交</string>
    <string name="text_reply_count">条回复</string>
    <string name="text_reply_count_1">%d条回复</string>
    <string name="text_look_home">查看主页</string>
    <string name="text_delete">删除</string>
    <string name="text_write_info">填写信息</string>
    <string name="text_complete_pay">完成支付</string>
    <string name="text_lawyer_call_back">律师回电</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_contact_phone">联系手机</string>
    <string name="text_select_pay_way">选择支付方式</string>
    <string name="text_wx_pay">微信支付</string>
    <string name="text_zfb_pay">支付宝</string>
    <string name="text_balance_pay">账户余额</string>
    <string name="text_remaining_amount">(可用余额 %s 元)</string>
    <string name="text_fast_consult_tip">温馨提示\n1.订单支付成功后，律师最快将在15钟内联系您，请保持电话畅通。\n2.为不影响您的体验，请尽量在工作时间（9:00-20:00）发布咨询。\n3.咨询时间为首次通话的30分钟内，请您提前准备好咨询内容。</string>
    <string name="text_fast_consult_tip_1">4.详细流程请查看</string>
    <string name="text_lex_transaction_process">《绿豆圈交易流程及服务规范》</string>
    <string name="text_order_money">订单金额</string>
    <string name="text_yuan_money">¥ %s</string>
    <string name="text_discount_money">已优惠 ¥ %s</string>
    <string name="text_pay_order">支付订单</string>
    <string name="text_lack_of_balance">您账户余额不足，是否前往充值？</string>
    <string name="text_leave_for_top_up">去充值</string>
    <string name="text_change_phone_number">更换手机号</string>
    <string name="text_registered_phone_number">使用注册手机号</string>
    <string name="text_has_helped">已帮助</string>
    <string name="text_people">人</string>
    <string name="text_your_name">您的称呼</string>
    <string name="text_your_mobile">您的手机号码</string>
    <string name="text_your_org">您的组织</string>
    <string name="text_join_org">加入的组织</string>
    <string name="text_your_work_unit">您的工作单位</string>
    <string name="text_please_enter_your_name">请输入您的称呼</string>
    <string name="text_please_enter_your_mobile">请输入您的手机号码</string>
    <string name="text_please_enter_your_org">请输入您所在的商会或其他社会组织</string>
    <string name="text_please_enter_your_work_unit">请输入您的工作单位或企业名称</string>
    <string name="text_mr">先生</string>
    <string name="text_ms">女士</string>
    <string name="text_account_balance">账户余额</string>
    <string name="text_transaction_detail">交易明细</string>
    <string name="text_withdrawal">提现</string>
    <string name="text_select_pay_money">选择充值金额</string>
    <string name="text_account_tip">温馨提示\n1.账户余额仅用于支付绿豆圈平台提供的法律服务。\n2.为避免因余额不足导致的咨询中断，建议账户余额不少于100元。</string>
    <string name="text_pay">充值</string>
    <string name="text_no_withdrawal_amount">账户无可提现余额</string>
    <string name="text_withdrawal_amount">提现金额</string>
    <string name="text_no_update_amount">暂不支持修改提现金额</string>
    <string name="text_payee_name">收款人姓名</string>
    <string name="text_zfb_account">支付宝账号</string>
    <string name="text_account_withdrawal_tip">温馨提示\n1、仅限支付宝提现。请填写您本人的真实姓名和账号。\n2、申请提交后，我们将在3–7个工作日内转到您的支付宝账户，感谢您对平台的支持。</string>
    <string name="text_income_amount">收入金额</string>
    <string name="text_order_no">订单编号:</string>
    <string name="text_order_time">订单时间:</string>
    <string name="text_goods_name">商品名称:</string>
    <string name="text_order_price">订单金额:</string>
    <string name="text_order_status">订单状态:</string>
    <string name="text_consult_customer">咨询客户:</string>
    <string name="text_talk_time">通话时间:</string>
    <string name="text_total_time">总计时长:</string>
    <string name="text_certification_label">认证标签</string>
    <string name="text_pay_success">充值成功</string>
    <string name="text_pay_success_1">支付成功</string>
    <string name="text_pay_fail">充值失败</string>
    <string name="text_pay_fail_1">支付失败</string>
    <string name="text_pay_cancel">用户取消</string>
    <string name="text_back">返回</string>
    <string name="text_clear_cache">清除缓存</string>
    <string name="text_logout">退出账号</string>
    <string name="text_version">%s版本</string>
    <string name="text_update_version">是否更新到绿豆圈%s版本？</string>
    <string name="text_next_besides">下次再说</string>
    <string name="text_background_to_download">后台下载</string>
    <string name="text_upgrade_now">立即升级</string>
    <string name="text_exit">退出</string>
    <string name="text_whether_to_install">安装包已下载完成，是否安装？</string>
    <string name="text_install">安装</string>
    <string name="text_tel">tel:%s</string>
    <string name="text_client_side">用户端 %s</string>
    <string name="text_about_me">关于我们</string>
    <string name="text_feedback">问题和反馈</string>
    <string name="text_business_cooperation">商务合作</string>
    <string name="text_problem_type">问题类型</string>
    <string name="text_please_select_the_problem_type">请选择问题类型</string>
    <string name="text_0_300">%d/300</string>
    <string name="text_upload_pictures">上传图片</string>
    <string name="text_click_upload">点击上传</string>
    <string name="text_coupons">优惠卡券</string>
</resources>