<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_view"
    android:layout_width="@dimen/qb_px_550"
    android:layout_height="wrap_content"
    android:background="@drawable/round_20_ffffff_all"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_35"
        android:layout_marginTop="@dimen/qb_px_35"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:layout_marginBottom="@dimen/qb_px_35"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_sure_to_delete"
        android:textColor="@color/c_323232"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:layout_below="@+id/tv_title"
        android:background="@color/c_d8d8d8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_80"
        android:layout_below="@+id/tv_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/c_737373"
            android:textSize="14sp" />

        <View
            android:layout_width="@dimen/qb_px_1"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title"
            android:background="@color/c_d8d8d8" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_confirm"
            android:textColor="@color/c_737373"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>
