<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_withdrawal_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_80"
        android:layout_marginTop="@dimen/qb_px_70"
        android:includeFontPadding="false"
        android:text="@string/text_withdrawal_amount"
        android:textColor="@color/c_b5b5b5"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_remaining_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_20"
        android:includeFontPadding="false"
        android:text="@string/text_remaining_amount"
        android:textColor="@color/c_b5b5b5"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_withdrawal_amount_text"
        app:layout_constraintStart_toEndOf="@id/tv_withdrawal_amount_text" />


    <TextView
        android:id="@+id/tv_withdrawal_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_80"
        android:layout_marginTop="@dimen/qb_px_150"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:background="@android:color/white"
        android:includeFontPadding="false"
        android:text="@string/text_yuan_money"
        android:textColor="@color/c_323232"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/qb_px_80"
        android:includeFontPadding="false"
        android:text="@string/text_no_update_amount"
        android:textColor="@color/c_ea5514"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_withdrawal_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_withdrawal_amount" />

    <View
        android:id="@+id/view_horizontal_line_1"
        android:layout_width="@dimen/qb_px_590"
        android:layout_height="@dimen/qb_px_1"
        android:layout_marginTop="@dimen/qb_px_15"
        android:background="@color/c_f4f4f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_amount" />

    <View
        android:id="@+id/view_horizontal_line_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_35"
        android:layout_marginTop="@dimen/qb_px_80"
        android:background="@color/c_f4f4f4"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_35"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_x"
        android:textColor="@color/c_ea5514"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_2" />

    <TextView
        android:layout_width="@dimen/qb_px_180"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_35"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_payee_name"
        android:textColor="@color/c_b5b5b5"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_2" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_215"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:background="@android:color/white"
        android:includeFontPadding="false"
        android:textColor="@color/c_323232"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_2" />

    <View
        android:id="@+id/view_horizontal_line_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/qb_px_1"
        android:layout_marginStart="@dimen/qb_px_35"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:background="@color/c_f4f4f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_35"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_x"
        android:textColor="@color/c_ea5514"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_3" />

    <TextView
        android:layout_width="@dimen/qb_px_180"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_35"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/text_zfb_account"
        android:textColor="@color/c_b5b5b5"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_3" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="@dimen/qb_px_100"
        android:layout_marginStart="@dimen/qb_px_215"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:background="@android:color/white"
        android:includeFontPadding="false"
        android:textColor="@color/c_323232"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_horizontal_line_3" />

    <View
        android:id="@+id/view_horizontal_line_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/c_f4f4f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_account" />

    <TextView
        android:id="@+id/tv_tip_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_35"
        android:layout_marginTop="@dimen/qb_px_40"
        android:layout_marginEnd="@dimen/qb_px_35"
        android:includeFontPadding="false"
        android:lineSpacingExtra="@dimen/qb_px_10"
        android:text="@string/text_account_withdrawal_tip"
        android:textColor="@color/c_717171"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_account" />

    <Button
        android:id="@+id/bt_withdrawal"
        android:layout_width="@dimen/qb_px_480"
        android:layout_height="@dimen/qb_px_70"
        android:layout_marginTop="@dimen/qb_px_80"
        android:background="@drawable/round_100_06a66a_all"
        android:includeFontPadding="false"
        android:text="@string/text_withdrawal"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_text" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</android.support.constraint.ConstraintLayout>